minor css fix for label alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,6 +98,7 @@
   width: 75%;
   margin: 10px 0;
   border-radius: 0;
+  vertical-align: middle;
 }
 
 label {
